support for color depths
Supports color depths between 1 and 8 for each channel, such as 8-8-8
(the default 24-bit format), 5-6-5 (a common 16-bit format), or 1-1-1
(basic 8-color).

Fix various off-by-one errors.

Bump version to 1.3.